--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,10 +2,8 @@ name: Build and Push Docker Image
 
 on:
   push:
-    paths-ignore:
-      - 'README.md'
-    branches:
-      - master
+    tags:
+      - '**'
 
 jobs:
   build-and-push:
@@ -31,6 +29,12 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: rainbowhu/clash-subscription-updater
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+          flavor: |
+            latest=true
           labels: |
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
             org.opencontainers.image.revision=${{ github.sha }}
@@ -42,5 +46,5 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: rainbowhu/clash-subscription-updater:latest
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
