--- a/.github/workflows/binary-release.yaml
+++ b/.github/workflows/binary-release.yaml
@@ -10,11 +10,31 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        goos: [linux, windows, darwin]
-        goarch: [amd64, arm64]
-        exclude: # Exclude unsupported combinations
+        include:
+          - goos: linux
+            goarch: amd64
+            artifact_name: ${{ github.event.repository.name }}
+            asset_name: ${{ github.event.repository.name }}-linux-amd64
+          - goos: linux
+            goarch: arm64
+            artifact_name: ${{ github.event.repository.name }}
+            asset_name: ${{ github.event.repository.name }}-linux-arm64
+          - goos: windows
+            goarch: amd64
+            artifact_name: ${{ github.event.repository.name }}.exe
+            asset_name: ${{ github.event.repository.name }}-win-amd64.exe
           - goos: windows
             goarch: arm64
+            artifact_name: ${{ github.event.repository.name }}.exe
+            asset_name: ${{ github.event.repository.name }}-win-arm64.exe
+          - goos: darwin
+            goarch: amd64
+            artifact_name: ${{ github.event.repository.name }}
+            asset_name: ${{ github.event.repository.name }}-macos-amd64
+          - goos: darwin
+            goarch: arm64
+            artifact_name: ${{ github.event.repository.name }}
+            asset_name: ${{ github.event.repository.name }}-macos-arm64
 
     steps:
       - name: Checkout repository
@@ -29,17 +49,13 @@ jobs:
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
-        run: |
-          mkdir -p build
-          go build -o build/clash-subscription-updater-${{ matrix.goos }}-${{ matrix.goarch }}
+        run: go build -o ${{ matrix.artifact_name }}
 
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: svenstaro/upload-release-action@v2
         if: startsWith(github.ref, 'refs/tags/') # Only create release on tag push
         with:
-          tag_name: ${{ github.ref_name }} # Uses the pushed tag name as the release tag
-          name: Release ${{ github.ref_name }} # Sets the release name
-          draft: false # Set to true to create a draft release
-          prerelease: false # Set to true for a pre-release
-          files: |
-            build/* # Upload all compiled binaries
+          overwrite: true
+          file: ${{ matrix.artifact_name }}
+          asset_name: ${{ matrix.asset_name }}
+          tag: ${{ github.ref }}
